network/manifests/traefik/tcp/02-tls-mongo/mongo-ingressroute-tcp-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mongo-traefik-tcp
spec:
  entryPoints:
    - mongo
  routes:
  - match: HostSNI(`mongo.local`)
    services:
    - name: mongo-traefik
      port: 27017
  tls:
    secretName: traefik-mongo-certs
  # tls:
  #   certResolver: ali
  #   domains:
  #   - main: "*.qikqiak.com"
  #   passthrough: false
